Release 1.1.0 audio pipeline overhaul
Bumps the project to 1.1.0 and adds a detailed release changelog. Refactors speaker/projection/radio/transmitter/wiretap/recording/wall audio paths to use isolated per-stream Opus codecs with deterministic channel IDs, better lifecycle cleanup, and locational channels for true 3D playback. Also fixes VoiceWall config reload synchronization and effective mode resolution when disabled, corrects wall attenuation gain math with limiter/clamping, and updates Qodana configuration.