@@ -1,8 +1,10 @@
 package fr.dreamin.dreamvoice.core.projection.service;
 
+import de.maxhenkel.voicechat.api.opus.OpusEncoder;
 import de.maxhenkel.voicechat.api.VoicechatConnection;
 import de.maxhenkel.voicechat.api.VoicechatServerApi;
 import de.maxhenkel.voicechat.api.VolumeCategory;
+import de.maxhenkel.voicechat.api.audiochannel.LocationalAudioChannel;
 import de.maxhenkel.voicechat.api.audiochannel.StaticAudioChannel;
 import fr.dreamin.dreamvoice.api.filter.service.VoiceFilterService;
 import fr.dreamin.dreamvoice.api.projection.model.VoiceProjection;
@@ -25,6 +27,7 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.File;
+import java.nio.charset.StandardCharsets;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Map;
@@ -33,7 +36,7 @@ import java.util.concurrent.ConcurrentHashMap;
 
 /**
  * Implementation of {@link VoiceProjectionService} managing body anchors,
- * remote acoustic projection, bidirectional listening, and persistence.
+ * remote acoustic projection with 3D spatialization, bidirectional listening, and persistence.
  */
 public final class VoiceProjectionServiceImpl implements VoiceProjectionService, Listener {
 
@@ -56,8 +59,11 @@ public final class VoiceProjectionServiceImpl implements VoiceProjectionService,
   private VolumeCategory volumeCategory;
 
   private final @NotNull Map<UUID, VoiceProjection> projections = new ConcurrentHashMap<>();
-  private final @NotNull Map<String, StaticAudioChannel> playerAudioChannels = new ConcurrentHashMap<>();
+  private final @NotNull Map<String, LocationalAudioChannel> locationalAudioChannels = new ConcurrentHashMap<>();
+  private final @NotNull Map<String, StaticAudioChannel> staticAudioChannels = new ConcurrentHashMap<>();
+  private final @NotNull Map<String, OpusEncoder> streamEncoders = new ConcurrentHashMap<>();
   private final @NotNull Map<String, Long> lastChannelActivity = new ConcurrentHashMap<>();
+
   private boolean voiceServiceMissingLogged = false;
 
   // ###############################################################
@@ -70,9 +76,9 @@ public final class VoiceProjectionServiceImpl implements VoiceProjectionService,
     Bukkit.getScheduler().runTaskTimer(plugin, this::cleanupIdleChannels, CLEANUP_INTERVAL_TICKS, CLEANUP_INTERVAL_TICKS);
   }
 
-  // ###############################################################
-  // ------------------- PUBLIC SERVICE METHODS --------------------
-  // ###############################################################
+  // ##############################################################
+  // ---------------------- SERVICE METHODS -----------------------
+  // ##############################################################
 
   @Override
   public void init(final @NotNull VoicechatServerApi api) {
@@ -114,8 +120,7 @@ public final class VoiceProjectionServiceImpl implements VoiceProjectionService,
   @Override
   public void removeProjection(final @NotNull UUID playerUuid) {
     this.projections.remove(playerUuid);
-    final var uidStr = playerUuid.toString();
-    this.playerAudioChannels.keySet().removeIf(k -> k.contains(uidStr));
+    cleanupStreamsMatching(playerUuid.toString());
   }
 
   @Override
@@ -144,7 +149,17 @@ public final class VoiceProjectionServiceImpl implements VoiceProjectionService,
   @Override
   public void clearProjections() {
     this.projections.clear();
-    this.playerAudioChannels.clear();
+    this.locationalAudioChannels.clear();
+    this.staticAudioChannels.clear();
+    this.lastChannelActivity.clear();
+    this.streamEncoders.values().forEach(enc -> {
+      if (!enc.isClosed()) {
+        try {
+          enc.close();
+        } catch (Throwable ignored) {}
+      }
+    });
+    this.streamEncoders.clear();
   }
 
   @Override
@@ -166,29 +181,42 @@ public final class VoiceProjectionServiceImpl implements VoiceProjectionService,
   }
 
   // ###############################################################
-  // ------------------- PRIVATE HELPER METHODS --------------------
+  // ----------------------- PRIVATE METHODS -----------------------
   // ###############################################################
 
   private void cleanupIdleChannels() {
     final var now = System.currentTimeMillis();
     this.lastChannelActivity.entrySet().removeIf(entry -> {
       if (now - entry.getValue() > INACTIVITY_TIMEOUT_MS) {
-        this.playerAudioChannels.remove(entry.getKey());
+        final var key = entry.getKey();
+        this.locationalAudioChannels.remove(key);
+        this.staticAudioChannels.remove(key);
+        final var enc = this.streamEncoders.remove(key);
+        if (enc != null && !enc.isClosed()) {
+          try {
+            enc.close();
+          } catch (Throwable ignored) {}
+        }
         return true;
       }
       return false;
     });
   }
 
-  private @Nullable StaticAudioChannel getOrCreateChannel(final @NotNull String streamKey, final @NotNull VoicechatConnection conn) {
-    return this.playerAudioChannels.computeIfAbsent(streamKey, id -> {
-      final var ch = this.api.createStaticAudioChannel(UUID.randomUUID());
-      if (ch != null) {
-        ch.addTarget(conn);
-        if (this.volumeCategory != null)
-          ch.setCategory(this.volumeCategory.getId());
+  private void cleanupStreamsMatching(final @NotNull String substring) {
+    this.locationalAudioChannels.keySet().removeIf(k -> k.contains(substring));
+    this.staticAudioChannels.keySet().removeIf(k -> k.contains(substring));
+    this.lastChannelActivity.keySet().removeIf(k -> k.contains(substring));
+    this.streamEncoders.entrySet().removeIf(e -> {
+      if (e.getKey().contains(substring)) {
+        if (!e.getValue().isClosed()) {
+          try {
+            e.getValue().close();
+          } catch (Throwable ignored) {}
+        }
+        return true;
       }
-      return ch;
+      return false;
     });
   }
 
@@ -205,12 +233,15 @@ public final class VoiceProjectionServiceImpl implements VoiceProjectionService,
     if (anchorWorld == null)
       return;
 
+    final var isWallEnabled = proj.isApplyVoiceWall() && wallService != null && wallService.isEnable();
+    final var maxDist = (float) proj.getDistance();
+
     for (final var listener : Bukkit.getOnlinePlayers()) {
       if (listener.getUniqueId().equals(senderUuid) || !listener.getWorld().equals(anchorWorld))
         continue;
 
       final var dist = anchorLoc.distance(listener.getLocation());
-      if (dist > proj.getDistance())
+      if (dist > maxDist)
         continue;
 
       final var listenerConn = this.api.getConnectionOf(listener.getUniqueId());
@@ -218,29 +249,109 @@ public final class VoiceProjectionServiceImpl implements VoiceProjectionService,
         continue;
 
       var totalDbLoss = 0.0;
-      if (proj.isApplyVoiceWall() && wallService != null && wallService.isEnable()) {
+      if (isWallEnabled) {
         final var ray = VoiceRayCast.check(anchorLoc, listener);
-        if (ray.isBlocked())
+        if (!ray.lineOfSight())
           totalDbLoss = ray.totalAttenuation();
       }
 
       if (totalDbLoss >= 99.0)
         continue;
 
-      transmitProjectedPacket(
+      transmitProjectedLocationalPacket(
+        proj,
         senderUuid,
-        listener.getUniqueId(),
-        listenerConn,
+        listener,
         rawOpus,
-        proj.getFilterId(),
         dist,
-        proj.getDistance(),
+        maxDist,
         totalDbLoss,
         voiceService,
         wallService,
-        filterService,
-        "proj_out:" + senderUuid + ":" + listener.getUniqueId()
+        filterService
       );
+    }
+  }
+
+  private void transmitProjectedLocationalPacket(
+    final @NotNull VoiceProjection proj,
+    final @NotNull UUID senderUuid,
+    final @NotNull Player listener,
+    final byte[] rawOpus,
+    final double dist,
+    final float maxDist,
+    final double totalDbLoss,
+    final @NotNull VoiceService voiceService,
+    final @Nullable VoiceWallService wallService,
+    final @Nullable VoiceFilterService filterService
+  ) {
+    final var streamKey = "proj_loc:" + proj.getUuid() + ":" + senderUuid + ":" + listener.getUniqueId();
+    try {
+      final var decoder = voiceService.getDecoder(senderUuid);
+      final var pcm = decoder.decode(rawOpus);
+      if (pcm == null || pcm.length == 0)
+        return;
+
+      var processed = pcm.clone();
+      final var customFilterId = proj.getFilterId();
+      if (customFilterId != null && filterService != null && !customFilterId.equalsIgnoreCase("none")) {
+        final var filter = filterService.getFilter(customFilterId);
+        if (filter != null)
+          processed = filter.process(processed, null);
+      } else if (filterService != null && filterService.hasActiveFilters(senderUuid)) {
+        processed = filterService.applyFilters(senderUuid, processed);
+      }
+
+      if (totalDbLoss > 0.0) {
+        final var wallGain = (float) Math.pow(10.0, -totalDbLoss / 20.0);
+        for (int i = 0; i < processed.length; i++)
+          processed[i] = (short) Math.clamp(Math.round(processed[i] * wallGain), Short.MIN_VALUE, Short.MAX_VALUE);
+      }
+
+      if (wallService != null && wallService.isAirDampingEnabled() && dist > 5.0) {
+        final var alpha = Math.max(0.10f, 1.0f - (float) (dist - 5.0) * 0.038f);
+        var smooth = (float) processed[0];
+        for (int i = 0; i < processed.length; i++) {
+          smooth = smooth + alpha * (processed[i] - smooth);
+          processed[i] = (short) Math.clamp(Math.round(smooth), Short.MIN_VALUE, Short.MAX_VALUE);
+        }
+      }
+
+      processed = AudioLimiter.process(processed);
+
+      var encoder = this.streamEncoders.get(streamKey);
+      if (encoder == null || encoder.isClosed()) {
+        encoder = this.api.createEncoder();
+        this.streamEncoders.put(streamKey, encoder);
+      }
+
+      final var newOpus = encoder.encode(processed);
+
+      var ch = this.locationalAudioChannels.get(streamKey);
+      if (ch == null || ch.isClosed()) {
+        final var loc = proj.getAnchorLocation();
+        final var sLevel = this.api.fromServerLevel(loc.getWorld());
+        final var pos = this.api.createPosition(loc.getX(), loc.getY(), loc.getZ());
+        final var channelUuid = UUID.nameUUIDFromBytes(streamKey.getBytes(StandardCharsets.UTF_8));
+        ch = this.api.createLocationalAudioChannel(channelUuid, sLevel, pos);
+        if (ch != null) {
+          final var targetUuid = listener.getUniqueId();
+          ch.setFilter(sp -> sp.getUuid().equals(targetUuid));
+          ch.setDistance(maxDist);
+          if (this.volumeCategory != null)
+            ch.setCategory(this.volumeCategory.getId());
+          this.locationalAudioChannels.put(streamKey, ch);
+        }
+      }
+
+      if (ch != null) {
+        final var loc = proj.getAnchorLocation();
+        ch.updateLocation(this.api.createPosition(loc.getX(), loc.getY(), loc.getZ()));
+        ch.send(newOpus);
+        this.lastChannelActivity.put(streamKey, System.currentTimeMillis());
+      }
+    } catch (Exception e) {
+      this.plugin.getLogger().warning("Failed to transmit locational projected packet (stream=" + streamKey + "): " + e.getMessage());
     }
   }
 
@@ -268,19 +379,18 @@ public final class VoiceProjectionServiceImpl implements VoiceProjectionService,
     var totalDbLoss = 0.0;
     if (proj.isApplyVoiceWall() && wallService != null && wallService.isEnable()) {
       final var ray = VoiceRayCast.check(senderPlayer.getEyeLocation(), anchorLoc);
-      if (ray.isBlocked())
+      if (!ray.lineOfSight())
         totalDbLoss = ray.totalAttenuation();
     }
 
     if (totalDbLoss >= 99.0)
       return;
 
-    transmitProjectedPacket(
+    transmitProjectedStaticPacket(
       senderUuid,
       proj.getPlayerUuid(),
       ownerConn,
       rawOpus,
-      null,
       dist,
       proj.getDistance(),
       totalDbLoss,
@@ -291,12 +401,11 @@ public final class VoiceProjectionServiceImpl implements VoiceProjectionService,
     );
   }
 
-  private void transmitProjectedPacket(
+  private void transmitProjectedStaticPacket(
     final @NotNull UUID senderUuid,
     final @NotNull UUID receiverUuid,
     final @NotNull VoicechatConnection receiverConn,
     final byte[] rawOpus,
-    final @Nullable String customFilterId,
     final double dist,
     final double maxDist,
     final double totalDbLoss,
@@ -307,51 +416,64 @@ public final class VoiceProjectionServiceImpl implements VoiceProjectionService,
   ) {
     try {
       final var decoder = voiceService.getDecoder(senderUuid);
-      final var encoder = voiceService.getEncoder(senderUuid);
       final var pcm = decoder.decode(rawOpus);
       if (pcm == null || pcm.length == 0)
         return;
 
-      var processed = pcm;
-      if (customFilterId != null && filterService != null && !customFilterId.equalsIgnoreCase("none")) {
-        final var filter = filterService.getFilter(customFilterId);
-        if (filter != null)
-          processed = filter.process(processed, null);
-      } else if (filterService != null && filterService.hasActiveFilters(senderUuid))
+      var processed = pcm.clone();
+      if (filterService != null && filterService.hasActiveFilters(senderUuid))
         processed = filterService.applyFilters(senderUuid, processed);
 
       final var distRatio = Math.min(1.0, dist / maxDist);
       final var distGain = (float) Math.max(0.05, 1.0 - (distRatio * 0.85));
-      final var wallGain = (float) Math.pow(10.0, -totalDbLoss / 20.0);
+      final var wallGain = totalDbLoss > 0.0 ? (float) Math.pow(10.0, -totalDbLoss / 20.0) : 1.0f;
       final var combinedGain = wallGain * distGain;
 
       for (int i = 0; i < processed.length; i++)
-        processed[i] = (short) Math.max(Short.MIN_VALUE, Math.min(Short.MAX_VALUE, Math.round(processed[i] * combinedGain)));
+        processed[i] = (short) Math.clamp(Math.round(processed[i] * combinedGain), Short.MIN_VALUE, Short.MAX_VALUE);
 
       if (wallService != null && wallService.isAirDampingEnabled() && dist > 5.0) {
         final var alpha = Math.max(0.10f, 1.0f - (float) (dist - 5.0) * 0.038f);
         var smooth = (float) processed[0];
         for (int i = 0; i < processed.length; i++) {
           smooth = smooth + alpha * (processed[i] - smooth);
-          processed[i] = (short) Math.max(Short.MIN_VALUE, Math.min(Short.MAX_VALUE, Math.round(smooth)));
+          processed[i] = (short) Math.clamp(Math.round(smooth), Short.MIN_VALUE, Short.MAX_VALUE);
         }
       }
 
       processed = AudioLimiter.process(processed);
 
+      var encoder = this.streamEncoders.get(streamKey);
+      if (encoder == null || encoder.isClosed()) {
+        encoder = this.api.createEncoder();
+        this.streamEncoders.put(streamKey, encoder);
+      }
+
       final var newOpus = encoder.encode(processed);
-      final var ch = getOrCreateChannel(streamKey, receiverConn);
+
+      var ch = this.staticAudioChannels.get(streamKey);
+      if (ch == null || ch.isClosed()) {
+        final var channelUuid = UUID.nameUUIDFromBytes(streamKey.getBytes(StandardCharsets.UTF_8));
+        ch = this.api.createStaticAudioChannel(channelUuid);
+        if (ch != null) {
+          ch.addTarget(receiverConn);
+          if (this.volumeCategory != null)
+            ch.setCategory(this.volumeCategory.getId());
+          this.staticAudioChannels.put(streamKey, ch);
+        }
+      }
+
       if (ch != null) {
         ch.send(newOpus);
         this.lastChannelActivity.put(streamKey, System.currentTimeMillis());
       }
     } catch (Exception e) {
-      this.plugin.getLogger().warning("Failed to transmit projected packet (sender=" + senderUuid + ", receiver=" + receiverUuid + "): " + e.getMessage());
+      this.plugin.getLogger().warning("Failed to transmit static projected packet (stream=" + streamKey + "): " + e.getMessage());
     }
   }
 
   // ###############################################################
-  // ---------------------- EVENT LISTENERS ------------------------
+  // ---------------------- LISTENER METHODS -----------------------
   // ###############################################################
 
   @EventHandler
